// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 1 expense totalling 12.50 Shmekels 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling ₪
    12.50
  </h1>
</div>
`;

exports[`should render ExpenseSummary with 2 expenses totalling 83.60 Shmekels 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling ₪
    83.60
  </h1>
</div>
`;
